--- a/modules/govuk_crawler/templates/seed-crawler-wrapper-cron.erb
+++ b/modules/govuk_crawler/templates/seed-crawler-wrapper-cron.erb
@@ -1,1 +1,1 @@
-0 <%= @start_hour %> * * * <%= @crawler_user %> /usr/bin/setlock -n <%= @seeder_lock_path %> <%= @seeder_script_wrapper_path %>
+0 <%= @start_hour %> * * <%= @days %> <%= @crawler_user %> /usr/bin/setlock -n <%= @seeder_lock_path %> <%= @seeder_script_wrapper_path %>
