Fix Jenkins Slack notifier
The Jenkins Slack norifier plugin needs to read the Integration token from
a Jenkins Credential. it can be imported automatically from the job
configuration.

--- a/modules/govuk_jenkins/templates/jobs/scrape_icinga_alerts_for_dashboard_metrics.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/scrape_icinga_alerts_for_dashboard_metrics.yaml.erb
@@ -38,6 +38,8 @@
       - slack:
           team-domain: <%= @slack_team_domain %>
           auth-token: <%= @slack_auth_token %>
+          auth-token-id: slack-token
+          auth-token-credential-id: slack-token
           build-server-url: <%= @slack_build_server_url %>
           notify-start: false
           notify-success: true
