--- a/modules/govuk_jenkins/templates/jobs/search_reindex_with_new_schema.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/search_reindex_with_new_schema.yaml.erb
@@ -16,7 +16,7 @@
           days-to-keep: 30
           artifact-num-to-keep: 5
     builders:
-        - shell: ssh deploy@$(govuk_node_list -c search --single-node) "cd /var/apps/<%= @target_application %> && govuk_setenv <%= @target_application %> bundle exec rake search:migrate_schema CONFIRM_INDEX_MIGRATION_START=1 SEARCH_INDEX=all"
+        - shell: ssh deploy@$(govuk_node_list -c search --single-node) "cd /var/apps/<%= @target_application %> && govuk_setenv <%= @target_application %> bundle exec rake search:migrate_schema SEARCH_INDEX=all"
     wrappers:
       - ansicolor:
           colormap: xterm
