Addition to grafana panel Adds a new registry to the registry request time grafana panel.

--- a/modules/grafana/templates/dashboards/application_dashboard_panels/_registry_request_time.json.erb
+++ b/modules/grafana/templates/dashboards/application_dashboard_panels/_registry_request_time.json.erb
@@ -19,6 +19,10 @@
     {
       "refId": "D",
       "target": "alias(maxSeries(stats.timers.govuk.app.<%= @app_name %>.*.registries.world_locations.request_time.upper_90), 'World Locations')"
+    },
+    {
+      "refId": "E",
+      "target": "alias(maxSeries(stats.timers.govuk.app.<%= @app_name %>.*.registries.full_topic_taxonomy.request_time.upper_90), 'Full Topic Taxonomy')"
     }
   ],
   "datasource": "Graphite",
