Fix Jenkins Slack plugin configuration
In https://github.com/alphagov/govuk-puppet/pull/9291 I was trying to
make Slack notify for all failures. The job was deployed, but the
setting wasn't changed in Jenkins ("Notify First Failure Only" was
still checked).

It seems like the name for multiword config attributes is wrong, and
has been since the first introduction
(https://github.com/alphagov/govuk-puppet/pull/5206).

The Slack publisher docs for jenkins job builder says that to use
hyphens for the options:

https://docs.openstack.org/infra/jenkins-job-builder/publishers.html

> notify-back-to-normal (bool) – Send notification when job is
succeeding again after being unstable or failed (>=2.0). (default false)
> notify-repeated-failure (bool) – Send notification when job fails
successively (previous build was also a failure) (>=2.0). (default
false)

--- a/modules/govuk_jenkins/templates/jobs/copy_attachments_to_integration.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/copy_attachments_to_integration.yaml.erb
@@ -58,11 +58,11 @@
           notify-start: false
           notify-success: true
           notify-aborted: true
-          notify-notbuilt: true
+          notify-not-built: true
           notify-unstable: false
           notify-failure: true
-          notify-backtonormal: false
-          notify-repeatedfailure: false
+          notify-back-to-normal: false
+          notify-repeated-failure: false
           include-test-summary: false
           room: <%= @slack_room %>
       <% end %>
