--- a/modules/govuk_jenkins/templates/jobs/scrape_icinga_alerts_for_dashboard_metrics.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/scrape_icinga_alerts_for_dashboard_metrics.yaml.erb
@@ -44,11 +44,11 @@
           notify-start: false
           notify-success: true
           notify-aborted: false
-          notify-notbuilt: false
+          notify-not-built: false
           notify-unstable: false
           notify-failure: true
-          notify-backtonormal: true
-          notify-repeatedfailure: true
+          notify-back-to-normal: true
+          notify-repeated-failure: true
           include-test-summary: false
           room: <%= @slack_room %>
       <% end %>
