--- a/modules/govuk_jenkins/templates/jobs/smokey.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/smokey.yaml.erb
@@ -29,11 +29,11 @@
           notify-start: false
           notify-success: false
           notify-aborted: true
-          notify-notbuilt: true
+          notify-not-built: true
           notify-unstable: false
           notify-failure: true
-          notify-backtonormal: true
-          notify-repeatedfailure: true
+          notify-back-to-normal: true
+          notify-repeated-failure: true
           include-test-summary: false
           room: <%= @slack_room %>
           include-custom-message: true
