--- a/modules/govuk_jenkins/templates/jobs/copy_attachments_to_staging.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/copy_attachments_to_staging.yaml.erb
@@ -58,11 +58,11 @@
           notify-start: false
           notify-success: true
           notify-aborted: true
-          notify-notbuilt: true
+          notify-not-built: true
           notify-unstable: false
           notify-failure: true
-          notify-backtonormal: false
-          notify-repeatedfailure: false
+          notify-back-to-normal: false
+          notify-repeated-failure: false
           include-test-summary: false
           room: <%= @slack_room %>
       <% end %>
