--- a/modules/govuk_jenkins/templates/jobs/publishing_api_archive_events.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/publishing_api_archive_events.yaml.erb
@@ -1,7 +1,7 @@
 ---
 - job:
     name: Publishing_API_Archive_Events
-    display-name: Publishing_API_Archive_Events
+    display-name: "Publishing API: Archive events"
     project-type: freestyle
     description: "This job periodically archives publishing API events to S3"
     properties:
@@ -23,6 +23,14 @@
             TZ=Europe/London
             H 5 * * 0
     publishers:
-        - email:
-            recipients: 2nd-line-support@digital.cabinet-office.gov.uk
-            send-to-individuals: true
+        - trigger-parameterized-builds:
+            - project: Success_Passive_Check
+              condition: 'SUCCESS'
+              predefined-parameters: |
+                  NSCA_CHECK_DESCRIPTION=<%= @service_description %>
+                  NSCA_OUTPUT=<%= @service_description %> success
+            - project: Failure_Passive_Check
+              condition: 'FAILED'
+              predefined-parameters: |
+                  NSCA_CHECK_DESCRIPTION=<%= @service_description %>
+                  NSCA_OUTPUT=<%= @service_description %> failed
