--- a/modules/govuk_jenkins/templates/jobs/check_pingdom_ip_ranges.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/check_pingdom_ip_ranges.yaml.erb
@@ -10,7 +10,7 @@
 
 - job:
     name: Check_Pingdom_IP_Ranges
-    display-name: Check_Pingdom_IP_Ranges
+    display-name: Check Pingdom IP Ranges
     project-type: freestyle
     description: "This job compares the IP ranges that Pingdom publishes against the ranges configured in govuk-provisioning and errors if they don't match."
     properties:
@@ -25,7 +25,16 @@
         - shell: |
             ruby tools/pingdom_ips.rb
     publishers:
-        - email:
-            recipients: 2nd-line-support@digital.cabinet-office.gov.uk
+        - trigger-parameterized-builds:
+            - project: Success_Passive_Check
+              condition: 'SUCCESS'
+              predefined-parameters: |
+                  NSCA_CHECK_DESCRIPTION=<%= @service_description %>
+                  NSCA_OUTPUT=<%= @service_description %> success
+            - project: Failure_Passive_Check
+              condition: 'FAILED'
+              predefined-parameters: |
+                  NSCA_CHECK_DESCRIPTION=<%= @service_description %>
+                  NSCA_OUTPUT=<%= @service_description %> failed
     triggers:
         - timed: 'H H * * 1'
