--- a/modules/grafana/templates/dashboards/application_dashboard_panels/_response_times.json.erb
+++ b/modules/grafana/templates/dashboards/application_dashboard_panels/_response_times.json.erb
@@ -71,7 +71,7 @@
       "timeField": "@timestamp"
     }
   ],
-  "timeFrom": "6h",
+  "timeFrom": null,
   "timeShift": null,
   "title": "Response Times",
   "tooltip": {
