use api key rather that username/password for collectd to access fastly

--- a/modules/collectd/templates/etc/collectd/conf.d/cdn_fastly.conf.erb
+++ b/modules/collectd/templates/etc/collectd/conf.d/cdn_fastly.conf.erb
@@ -6,8 +6,7 @@
   Import "collectd_cdn.fastly"
 
   <Module "collectd_cdn.fastly">
-    ApiUser "<%= username -%>"
-    ApiPass "<%= password -%>"
+    ApiKey "<%= api_key -%>"
 
 <% @services.each_pair do |name, id| -%>
     <Service>
