Convert CDN jobs to accept an API key
We can no longer use a username/password combination for authenticating
with the Fastly API.

--- a/modules/govuk_jenkins/templates/jobs/deploy_cdn.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/deploy_cdn.yaml.erb
@@ -66,8 +66,5 @@
                 - performanceplatform
                 - mirror
         - string:
-            name: FASTLY_USER
-            default: false
-        - password:
-            name: FASTLY_PASS
+            name: FASTLY_API_KEY
             default: false
