--- a/modules/govuk_jenkins/templates/jobs/update_cdn_dictionaries.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/update_cdn_dictionaries.yaml.erb
@@ -58,8 +58,5 @@
                 - PLEASE CHOOSE ONE
                 - www
         - string:
-            name: FASTLY_USER
-            default: false
-        - password:
-            name: FASTLY_PASS
+            name: FASTLY_API_KEY
             default: false
