Change FASTLY_API_KEY to a password parameter
This ensures the value won't be accessible from old jobs.

--- a/modules/govuk_jenkins/templates/jobs/deploy_cdn.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/deploy_cdn.yaml.erb
@@ -65,6 +65,6 @@
                 - servicegovuk
                 - performanceplatform
                 - mirror
-        - string:
+        - password:
             name: FASTLY_API_KEY
             default: false
