--- a/modules/govuk_jenkins/templates/jobs/update_cdn_dictionaries.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/update_cdn_dictionaries.yaml.erb
@@ -60,6 +60,6 @@
                 <% if @allow_deploy_to_mirror %>
                 - mirror
                 <% end %>
-        - string:
+        - password:
             name: FASTLY_API_KEY
             default: false
