--- a/modules/govuk_jenkins/templates/jobs/data_sync.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/data_sync.yaml.erb
@@ -16,7 +16,7 @@
             if [ ! -z $SYNC_CONFIGFILE]; then ARG_CONFIGFILE="-f ${SYNC_CONFIGFILE}";fi
             if [ ! -z $SYNC_TIMESTAMP]; then ARG_TIMESTAMP="-t ${SYNC_TIMESTAMP}";fi
             ssh deploy@${SYNC_HOST} \
-            "/usr/bin/setlock /etc/unattended-reboot/no-reboot/govuk_env_sync \
+            "/usr/local/bin/with_reboot_lock \
              /usr/bin/envdir /etc/govuk_env_sync/env.d \
              sudo -u govuk-backup /usr/local/bin/govuk_env_sync.sh \
              ${ARG_CONFIGFILE} \
