--- a/modules/govuk_jenkins/templates/jobs/mongo_data_sync.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/mongo_data_sync.yaml.erb
@@ -20,7 +20,7 @@
           # If the member is a master, then intiate data-sync.
           for member in ${members[@]}; do
             if $(ssh deploy@${member} "mongo --quiet --host "$member" --eval 'rs.isMaster().ismaster'"); then
-              ssh deploy@${member} "/usr/bin/setlock /etc/unattended-reboot/no-reboot/govuk_env_sync /usr/bin/envdir /etc/govuk_env_sync/env.d /usr/local/bin/govuk_env_sync.sh -f /etc/govuk_env_sync/pull_api_mongo_daily.cfg"
+              ssh deploy@${member} "/usr/local/bin/with_reboot_lock /usr/bin/envdir /etc/govuk_env_sync/env.d /usr/local/bin/govuk_env_sync.sh -f /etc/govuk_env_sync/pull_api_mongo_daily.cfg"
 
               # Exit once completed.
               exit $EXITCODE
