Renaming Publishing API dashboards
So that they are all named consistently.

--- a/modules/grafana/templates/dashboards/publishing_api_overview.json.erb
+++ b/modules/grafana/templates/dashboards/publishing_api_overview.json.erb
@@ -1,6 +1,6 @@
 {
   "id": null,
-  "title": "Publishing API Overview",
+  "title": "Publishing API - Overview",
   "tags": [],
   "style": "dark",
   "timezone": "browser",
